# mastery-transcript

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  users.py  utils.py
migrations/versions/: 52871fbc79c1_add_artifact_descriptions.py  836b4899eae0_user_profile_and_settings.py  9ce760275198_create_user_table.py  d0c11127f99b_add_artifact_relationship_to_user.py
models/: artifact.py  course.py  user.py  user_profile.py  user_settings.py
resources/: artifactapi.py  userapi.py
schemas/: user_profile_schema.py  user_schema.py
tests/: test_artifact_endpoints.py  test_artifact_model.py  test_mtc_clone.py  test_single_user.py  test_user_endpoints.py  test_user_model.py  test_users.py  test_utils.py
